force-app/main/default/objects/Account/fields/additionalInfo__c.field-meta.xml
<CustomField>
    <fullName>additionalInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>additionalInfo</label>
    <type>Checkbox</type>
</CustomField>