force-app/main/default/objects/Account/fields/calledByStuff__c.field-meta.xml
<CustomField>
    <fullName>calledByStuff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>calledByStuff</label>
    <type>Checkbox</type>
</CustomField>