force-app/main/default/objects/Account/fields/testcheckbox__c.field-meta.xml
<CustomField>
    <fullName>testcheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>testcheckbox</label>
    <type>Checkbox</type>
</CustomField>